# carp

./: format.md
cpp/: CMakeLists.txt
cpp/carp/: CMakeLists.txt
cpp/carp/inc/: carp.h
cpp/carpapp/: CMakeLists.txt  main.cpp
cpp/carpapp/otherdomain/: carp.domain
tools/carpify/: carpify.py
tools/carpview/: carp.domain  mainwindow.ui  out.domain  pyproject.toml
tools/carpview/carpview/: main.py
tools/domainmerge/: pyproject.toml
tools/domainmerge/domainmerge/: main.py
