[tool.poetry]
name = "domainmerge"
version = "0.1.0"
description = ""
authors = ["rincewound <aaargh@minddebugger.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
domainmerge = "domainmerge.main:run"